<resources>
    <string name="app_name">Philbrick</string>

    <!-- Account -->
    <string name="privacy_policy"><u><font color="#242424"><![CDATA[Privacy Policy]]></font></u></string>
    <string name="product_details">Product Details</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="company_name">Company Name</string>
    <string name="address">Address</string>
    <string name="name">Name :</string>
    <string name="full_address">Two Panel Center Opening Car Door Mechanism</string>
    <string name="date">04/07/2022</string>
    <string name="product_detail">Backed with immense industrial experience..</string>
    <string name="enter_otp_sent_to">Enter OTP sent to</string>
    <string name="otp_sent_number_">(+91) </string>
    <string name="didn_t_receive_the_code">Didn’t receive the code?</string>
    <string name="resend">Resend</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="scanner">Scanner</string>
    <string name="hint_enter_mobile_number">Enter Mobile Number</string>

    <!-- Navigation And Menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_about">About Us</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_terms">Terms of Use</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_delete">Delete Account</string>


    <!-- Scanner -->
    <string name="manufacturing_date">Manufacturing date :</string>
    <string name="product_details_title">Product Details :</string>


    <string name="email">Email</string>
    <string name="please_wait">Please wait...</string>

    <string name="title_terms_of_use_">Terms of Use</string>
    <string name="title_privacy_policy_">Privacy Policy</string>

    <!--- Error Messages -->
    <string name="network_error_msg">No internet connection.</string>
    <string name="error_msg">Something went wrong. Please try again later.</string>
    <string name="err_mobile_no_required">Mobile number is required.</string>
    <string name="err_otp_required">OTP is required.</string>
    <string name="err_first_name_required">First Name is required.</string>
    <string name="err_last_name_required">Last Name is required.</string>
    <string name="err_company_name_required">Company Name is required.</string>
    <string name="err_phone_number_required">Phone Number is required.</string>
    <string name="err_address_required">Address Name is required.</string>
    <string name="err_email_address_required">Email address is required.</string>
    <string name="err_invalid_email_address">Invalid email address.</string>
    <string name="err_email_length">email address must have at least 5 to 120 characters.</string>
    <string name="err_photo_required">Photo is required.</string>
    <string name="logout">Logout</string>
    <string name="msg_logout">Are you sure you want to logout from this app?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logout_successfully">Logout successfully.</string>
    <string name="serial_number">Serial Number: </string>
    <string name="motor">Motor: </string>
    <string name="power_supply">Power Supply: </string>
    <string name="date_of_mfg">Date of MFG: </string>
    <string name="driver">Driver:</string>
    <string name="hard_ware_kit_set">Hardware Kit Set: </string>
    <string name="header_assembly">Header Assembly: </string>
    <string name="sill_roller_assembly_set">Sill Roller Assembly Set: </string>
    <string name="sill">Sill:</string>
    <string name="drawing_manual">Drawing/Manual: </string>
    <string name="skate">Skate: </string>
    <string name="car_header_fitting_clamp">Car Header Fitting Clamp: </string>
    <string name="motor_driver_power_supply"><![CDATA[Motor, Drive & Power Supply: ]]></string>
    <string name="Category">Category:</string>
    <string name="subCategory">Sub Category</string>
    <string name="ProductName">Product Name:</string>
    <string name="PartName">Part Name:</string>
    <string name="PartCode">Part Code</string>
    <string name="serialnumber">Serial Number:</string>
    <string name="DateofMFG">Date of MFG.:</string>
    <string name="Headerassembly">Header assembly:</string>
    <string name="sillrollerassemblyset">Sill Roller Assembly Set</string>
    <string name="carheaderfittingclamp">Car Header Fitting Clamp</string>
    <string name="MotorDrivePowerSupply"><![CDATA[Motor,Drive & Power Supply]]></string>
    <string name="hardwarekitset">Hardware Kit Set</string>
    <string name="drawingmanual">Drawing/Manual</string>
    <string name="version">Version:</string>
    <string name="Model">Model:</string>
    <string name="hp">H.P.</string>
    <string name="floor">Floor:</string>
    <string name="supply">Supply:</string>
    <string name="SrialNumber">Srial Number:</string>
    <string name="CustomerName">Customer Name:</string>
    <string name="driverno">Drive No.</string>
    <string name="privacypolicy">\nPhilbrick Mobile App Privacy Policy\n\nEffective Date: April 13, 2023 \nPhilbrick Technologies India Pvt Limited provides this privacy policy to inform users of our mobile application “Philbrick” about our policies and procedures regarding the collection, use, and disclosure of personal information we receive from users of the App.\n\nInformation We Collect\nWe may collect information that can identify you (\"Personal Information\"), such as your name, email address, and telephone number when you register for an account with us. We may also collect other information, such as your location, device information, and usage data, through cookies and other tracking technologies.\n\nHow We Use Your Information\nWe use the information we collect to provide and improve our services to you, to communicate with you, and to personalize your experience with the App. We may also use your information to comply with legal obligations or to protect our rights and interests.\n\nSharing of Information\nWe may share your information with third-party service providers that help us operate the App, such as payment processors and cloud storage providers. We may also share your information with third parties in connection with a business transaction, such as a merger or acquisition. We will never sell your Personal Information to third parties for marketing purposes.\n\nData Retention and Security\nWe will retain your Personal Information for as long as necessary to provide you with the services and to comply with our legal obligations. We take reasonable measures to protect your Personal Information from unauthorized access and use.\n\nYour Rights and Choices\nYou have the right to access, correct, and delete your Personal Information. You may also choose to opt-out of receiving certain communications from us. If you have any questions or concerns about your privacy rights or how your information is being used, please contact us using the information provided below.\n\nChanges to this Privacy Policy\nWe may update this privacy policy from time to time. We will notify you of any changes by posting the new privacy policy on the App. You are advised to review this privacy policy periodically for any changes.\n\nContact Us If you have any questions or concerns about this privacy policy, please contact us at\n\nphilbrick@philbrickindia.com\n+91 8401219941\n</string>
    <string name="deleteaccount">Delete Account</string>
    <string name="msg_deleteaccount">Are you sure you want to delete account from this app?</string>
</resources>