<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/txtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Category"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCategoryDetail"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_toEndOf="@+id/txtCategory"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtCategory"
        app:layout_constraintTop_toTopOf="@+id/txtCategory" />

    <TextView
        android:id="@+id/txtSubCategory"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/subCategory"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCategoryDetail" />

    <TextView
        android:id="@+id/txtSubCategoryDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_toEndOf="@+id/txtSubCategory"
        android:fontFamily="@font/poppins"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtSubCategory"
        app:layout_constraintTop_toTopOf="@+id/txtSubCategory" />

    <TextView
        android:id="@+id/txtProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/ProductName"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSubCategoryDetail" />

    <TextView
        android:id="@+id/txtProductNameDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_toEndOf="@+id/txtSubCategory"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtProductName"
        app:layout_constraintTop_toTopOf="@+id/txtProductName" />

    <TextView
        android:id="@+id/txtPartName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/PartName"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProductName" />

    <TextView
        android:id="@+id/txtPartNameDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPartName"
        app:layout_constraintTop_toTopOf="@+id/txtPartName" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/version"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPartName" />

    <TextView
        android:id="@+id/txtVersionDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_toEndOf="@+id/txtVersion"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtVersion"
        app:layout_constraintTop_toTopOf="@+id/txtVersion" />

    <TextView
        android:id="@+id/txtSerialNumberCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/serialnumber"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVersion" />

    <TextView
        android:id="@+id/txtSerialNumberDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_toEndOf="@+id/txtPartCode"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtSerialNumberCode"
        app:layout_constraintTop_toTopOf="@+id/txtSerialNumberCode" />
    <TextView
        android:id="@+id/txtDomrgCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/DateofMFG"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSerialNumberDetail" />

    <TextView
        android:id="@+id/txtDomrgDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_toEndOf="@+id/txtPartCode"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDomrgCode"
        app:layout_constraintTop_toTopOf="@+id/txtDomrgCode" />
    <TextView
        android:id="@+id/txtMoter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/motor"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDomrgCode" />

    <TextView
        android:id="@+id/txtMoterDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_toEndOf="@+id/txtPartCode"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtMoter"
        app:layout_constraintTop_toTopOf="@+id/txtMoter" />


    <TextView
        android:id="@+id/txtDrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/driver"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMoter" />

    <TextView
        android:id="@+id/txtDriveDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_toEndOf="@+id/txtPartCode"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDrive"
        app:layout_constraintTop_toTopOf="@+id/txtDrive" />

    <TextView
        android:id="@+id/txtPowerSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/power_supply"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDrive" />

    <TextView
        android:id="@+id/txtPowerSupplyDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_toEndOf="@+id/txtPowerSupply"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPowerSupply"
        app:layout_constraintTop_toTopOf="@+id/txtPowerSupply"/>

    <TextView
        android:id="@+id/txtHardwarekitsetCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/hardwarekitset"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPowerSupply" />

    <TextView
        android:id="@+id/txtHardwarekitsetDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_toEndOf="@+id/txtPowerSupply"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtHardwarekitsetCode"
        app:layout_constraintTop_toTopOf="@+id/txtHardwarekitsetCode"/>


</androidx.constraintlayout.widget.ConstraintLayout>